[Offline Pages] Fix flaky test due to actual loading of database.

The flaky was due to the issue when trying to load OfflinePageModel, it
would crash with SQLite Error 1802. Fixed by mock the OfflinePageModel
if we're in a testing environment.

BUG=644570

Review-Url: https://codereview.chromium.org/2322793003
Cr-Commit-Position: refs/heads/master@{#417465}

Former-commit-id: dd2258ce9e678e3bdbcfe814649851882dfe8118